refactor: update JSX syntax for improved readability

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,7 +6,7 @@
   "tabWidth": 4,
   "useTabs": false,
   "bracketSpacing": true,
-  "bracketSameLine": false,
+  "bracketSameLine": true,
   "arrowParens": "always",
   "endOfLine": "lf",
   "plugins": [
