--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.6",
         "@remixicon/react": "^4.6.0",
+        "@solana/web3.js": "^1.98.0",
+        "@tensorflow/tfjs": "^4.22.0",
+        "@xenova/transformers": "^2.17.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.15.0",
@@ -36,6 +39,7 @@
         "react-day-picker": "8.10.1",
         "react-dom": "^19.0.0",
         "react-particles": "^2.12.2",
+        "recharts": "^2.15.0",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
