--- a/package.json
+++ b/package.json
@@ -55,12 +55,17 @@
         "@types/react-dom": "^19.0.0",
         "eslint": "^9.17.0",
         "eslint-config-next": "15.1.0",
+        "node-loader": "^2.1.0",
         "postcss": "^8.4.49",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.12",
         "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.7.2"
+    },
+    "browser": {
+        "onnxruntime-node": false,
+        "@xenova/transformers": false
     },
     "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
