--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "express-validator": "^7.2.0",
+    "ioredis": "^5.4.2",
     "mongodb": "^6.7.0",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
