--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-progress": "^1.1.1",
         "@radix-ui/react-scroll-area": "^1.2.2",
+        "@radix-ui/react-select": "^2.1.4",
         "@radix-ui/react-separator": "^1.1.1",
         "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.6",
         "@remixicon/react": "^4.6.0",
+        "@solana/wallet-adapter-react": "^0.15.35",
         "@solana/web3.js": "^1.98.0",
-        "@tensorflow/tfjs": "^4.22.0",
-        "@xenova/transformers": "^2.17.2",
-        "bs58": "^6.0.0",
+        "@tsparticles/react": "^3.0.0",
+        "bs58": "^4.0.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.15.0",
@@ -36,23 +37,22 @@
         "next": "15.1.2",
         "next-safe-action": "^7.10.2",
         "next-themes": "^0.4.4",
-        "react": "^18.0.0",
+        "react": "^18",
         "react-day-picker": "8.10.1",
-        "react-dom": "^18.0.0",
+        "react-dom": "^18",
         "react-particles": "^2.12.2",
         "recharts": "^2.15.0",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
-        "tsparticles-slim": "^2.12.0",
-        "zustand": "^5.0.2"
+        "tsparticles-slim": "^2.12.0"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3.2.0",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-        "@types/node": "^20.17.10",
-        "@types/react": "^19.0.0",
-        "@types/react-dom": "^19.0.0",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
         "eslint": "^9.17.0",
         "eslint-config-next": "15.1.0",
         "node-loader": "^2.1.0",
@@ -62,10 +62,6 @@
         "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.4.17",
         "typescript": "^5.7.2"
-    },
-    "browser": {
-        "onnxruntime-node": false,
-        "@xenova/transformers": false
     },
     "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
