--- a/package.json
+++ b/package.json
@@ -28,16 +28,20 @@
         "@remixicon/react": "^4.6.0",
         "@solana/wallet-adapter-react": "^0.15.35",
         "@solana/web3.js": "^1.98.0",
+        "@tanstack/react-table": "^8.20.6",
         "@tsparticles/react": "^3.0.0",
         "bs58": "^4.0.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^11.15.0",
         "lucide-react": "^0.468.0",
+        "moralis": "^2.27.2",
         "next": "15.1.2",
         "next-safe-action": "^7.10.2",
         "next-themes": "^0.4.4",
+        "openai": "^4.77.3",
         "react": "^18",
+        "react-chartjs-2": "^5.3.0",
         "react-day-picker": "8.10.1",
         "react-dom": "^18",
         "react-particles": "^2.12.2",
