--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "format:check": "prettier --check \"**/*.{ts,tsx,md,json,js,jsx}\""
     },
     "dependencies": {
+        "@google/generative-ai": "^0.21.0",
         "@radix-ui/react-accordion": "^1.2.2",
         "@radix-ui/react-alert-dialog": "^1.1.4",
         "@radix-ui/react-avatar": "^1.1.2",
