Refactor TradingAnalysis component to utilize TypewriterText for improved text display and add markdown rendering capabilities

--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
         "react-chartjs-2": "^5.3.0",
         "react-day-picker": "8.10.1",
         "react-dom": "^18",
+        "react-markdown": "^9.0.3",
         "react-particles": "^2.12.2",
         "recharts": "^2.15.0",
+        "remark-gfm": "^4.0.0",
         "sonner": "^1.7.1",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
